src/snapshots/monkey_language_server__parser__test__hash_unhappy_5.snap
---
source: src/parser.rs
description: "{1:2"
expression: stmts
---
[
    Err(ExpectedTokenNotFound("SyntaxError: Expected '}' not found."), (0,3)->(0,4)),
]
