src/snapshots/monkey_language_server__parser__test__hash_unhappy_8.snap
---
source: src/parser.rs
description: "{1:@}"
expression: stmts
---
[
    Hash {
        token: Token(LBrace, "{", (0,0)->(0,1)),
        kv_pairs: Err(
            Err(UnexpectedToken("SyntaxError: Unexpected '@'."), (0,3)->(0,4)),
        ),
    },
]
