src/snapshots/monkey_language_server__parser__test__identifier.snap
---
source: src/parser.rs
description: x
expression: stmts
---
[
    Identifier { token: Token(Identifier, "x", (0,0)->(0,1)), name: "x" },
]
